--- a/src/components/github/FullProfile/css/fullProfile.css
+++ b/src/components/github/FullProfile/css/fullProfile.css
@@ -28,6 +28,8 @@
 }
 
 .analyze-container {
+    background-color: white;
+    border: 2px solid white;
     padding: 10px;
     width: 250px;
     height: 300px;
