--- a/src/components/github/Profile/Repository/css/repositories.css
+++ b/src/components/github/Profile/Repository/css/repositories.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     margin: 10px;
     min-height: 100px;
-    color: #CA5353;
+    color: white;
     height: 175px;
     overflow: auto;
 }
